# privexbot

./: .gitignore  CLAUDE.md  README.md  pytest.ini
backend/: .env.dev.example  .env.example  .env.secretvm  .env.secretvm.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.dev.cpu  Dockerfile.secretvm  ENDPOINT_TESTING_RESULTS.md  FIXES_SUMMARY.md  KB_API_COMPLETE_ANALYSIS_REPORT.md  KB_FLOW_COMPREHENSIVE_ANALYSIS.md  PASSWORD_RESET_SETUP.md  PRODUCTION_MIGRATION_GUIDE.md  README.md  comprehensive_kb_api_test.py  comprehensive_kb_flow_test.py  comprehensive_kb_test.py  demonstrate_full_content.py  docker-compose.dev.yml  docker-compose.secretvm-inline.yml  docker-compose.secretvm.yml  docker-compose.secretvm.yml.backup.20251202_022320  docker-compose.yml  docker-compose.yml.backup.20251121_221842  kb_test_results.json  pyproject.toml  simple_kb_test.py  test_document_tasks_import.py  test_enhanced_kb_features.py  test_fixes.py  test_pipeline_fix.py  test_uniswap_finalize.py
backend/.venv-test/: pyvenv.cfg
backend/deploy/: cpu-image-info.json
backend/deploy/secretvm/: image-info.json
backend/docs/: KB_API_COMPLETE_GUIDE_AND_TEST_RESULTS.md
backend/docs/kb-docs/: configuration-architecture-analysis.md  document-upload-indexing-architecture.md  vector-storage-retrieval-architecture.md
backend/docs/kb/api-references/: content-enhancement-apis.md
backend/scripts/: docker-entrypoint.sh  install-playwright.sh  migrate_legacy_model_field.py  scrape_custom_url.py  seed_chatflow_templates.py  set_initial_staff.py  test-migration-fix.sh  test-secretvm.sh  test_all_chunking_strategies.py  test_chatbot_pipeline.py  test_config_backward_compat.py  test_file_upload_e2e.sh  test_inference_service.py  test_integration.py  test_kb_config_flow_comprehensive.py  test_kb_end_to_end.py  test_preview_parity.py  test_retrieval_config.py  test_secret_ai.py  test_simple_health.py  verify-pgvector.py  verify_test_setup.sh
backend/scripts/docker/: build-cpu.sh  build-push-cpu.sh  build-push-secretvm.sh  build-push.sh  check.sh  deploy-cpu.sh  dev-cpu.sh  dev.sh  entrypoint-prod.sh  secretvm-deploy.sh  test-workflow.sh  update-digests.sh
backend/src/: alembic.ini  test_auth_implementation.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0559324f120b_add_page_view_to_eventtype_enum.py  1381db9ee598_add_provider_column_to_credentials.py  144563994efd_add_is_default_field_to_organizations_.py  1486a632dca2_add_workspace_id_to_notifications.py  185d2379d2c0_add_context_field_to_knowledge_base.py  2388518a8727_add_avatar_url_to_workspace_and_.py  2ead938281e6_add_widget_events_and_credentials_tables.py  3b2a942d5b19_add_missing_kb_fields.py  3c4e4feca860_add_user_and_authidentity_tables_for_.py  418102d6f547_add_avatar_url_to_users.py  41b40d486422_add_lead_lat_lng_columns.py  5000eb773e1a_add_referrals_and_user_referral_code.py  542f44068e22_add_chatbot_api_key_chat_session_chat_.py  5a64a22fc440_add_lead_consent_fields.py  61fae9d160d7_add_chatflows_table.py  63cf67facefa_add_variables_config_to_chatbots.py  71188321296b_add_is_staff_to_users.py  7278633aa5e9_add_slug_to_workspaces.py  777fd4fd2c51_add_notifications_table.py  7a53751fb370_add_chatbot_archive_audit_fields.py  7f59f7b0d2af_add_slack_workspace_deployments.py  890b361d4089_add_content_full_field_to_documents_.py  890e849f1044_add_knowledge_base_document_chunk_.py  96404abb875a_add_discord_guild_entity_type_check_.py  a680b994bafd_add_invitations_table.py  add_discord_guild_deployments.py  af049a07de1b_add_organization_and_workspace_multi_.py  b1a30eec0e64_add_discord_guild_deployments.py  b22d1c780092_add_is_public_to_chatflows.py  b686a597e5e8_add_slug_history_table.py  c5ecd5ee2d8e_add_chatflow_templates.py  (+6 more)
backend/src/app/: main.py
frontend/: .env.example  (+26 more)
(+722 files in other folders)
