[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "celery[redis]>=5.4.0",
    "fastapi>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.43",
    # Authentication dependencies
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",  # Compatible version with passlib
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    # Wallet authentication
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "pynacl>=1.5.0",
    "base58>=2.1.1",
    "ecdsa>=0.18.0",
    "bech32>=1.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # KB implementation
    "pgvector>=0.2.4",
    "crawl4ai>=0.2.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "torch>=2.0.0",
    "playwright>=1.40.0",
    # Celery monitoring
    "flower>=2.0.0",
]
