[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "celery[redis]>=5.4.0",
    "fastapi>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.43",
    # Authentication dependencies
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",  # Compatible version with passlib
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    # Wallet authentication
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "pynacl>=1.5.0",
    "base58>=2.1.1",
    "ecdsa>=0.18.0",
    "bech32>=1.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # KB implementation
    "pgvector>=0.2.4",
    "crawl4ai>=0.2.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "torch>=2.0.0",
    "playwright>=1.40.0",
    "python-magic>=0.4.27",  # MIME type detection for file uploads
    # Celery monitoring
    "flower>=2.0.0",
    # LLM Inference providers
    "openai>=1.0.0",  # OpenAI-compatible APIs (OpenAI, Ollama, DeepSeek, Secret AI)
    "google-genai>=0.1.0",  # Google Gemini API
    # Native Secret AI SDK. Pinned to >=0.1.7 because earlier 0.1.x
    # versions had a different transitive set — when uv's resolver picked
    # 0.1.0 in some builds it dropped `secret-sdk` and `betterproto`,
    # producing images where `import secret_ai_sdk.secret_ai` raised
    # ModuleNotFoundError at chat time. 0.1.7 is the version exercised
    # in dev and locked in uv.lock.
    "secret-ai-sdk>=0.1.7",
    # Transitive deps of secret-ai-sdk that we MUST pin explicitly.
    # The uv resolver drops them between builds depending on which
    # secret-ai-sdk minor it picks; making them direct deps stops the
    # whack-a-mole.
    "secret-sdk>=1.8.3",          # secret_ai_sdk.secret imports `from secret_sdk.client.lcd import LCDClient`
    "langchain-ollama>=1.0.0",     # secret_ai_sdk.secret_ai imports `langchain_ollama.chat_models.ChatOllama`
    "betterproto>=2.0.0b5",        # secret_sdk.protobuf.* imports betterproto. Prerelease — needs --prerelease=allow at install
    # setuptools<81 keeps pkg_resources available. betterproto 2.0.0b5
    # calls `from pkg_resources import get_distribution` at module load;
    # setuptools 81 removed pkg_resources. Remove this pin once
    # secret-ai-sdk upgrades betterproto past 2.0.0b5.
    "setuptools<81",
    # Object storage
    "minio>=7.2.0",  # S3-compatible object storage client
]
